; ModuleID = '/home/carl/AnghaBench/linux/net/ipv4/extr_tcp_bpf.c_tcp_bpf_sendmsg_redir.c'
source_filename = "/home/carl/AnghaBench/linux/net/ipv4/extr_tcp_bpf.c_tcp_bpf_sendmsg_redir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock = type { i32 }
%struct.sk_msg = type { i32 }
%struct.sk_psock = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tcp_bpf_sendmsg_redir(%struct.sock* %0, %struct.sk_msg* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.sock*, align 8
  %7 = alloca %struct.sk_msg*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.sk_psock*, align 8
  %12 = alloca i32, align 4
  store %struct.sock* %0, %struct.sock** %6, align 8
  store %struct.sk_msg* %1, %struct.sk_msg** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %13 = load %struct.sk_msg*, %struct.sk_msg** %7, align 8
  %14 = call i32 @sk_msg_to_ingress(%struct.sk_msg* %13)
  store i32 %14, i32* %10, align 4
  %15 = load %struct.sock*, %struct.sock** %6, align 8
  %16 = call %struct.sk_psock* @sk_psock_get(%struct.sock* %15)
  store %struct.sk_psock* %16, %struct.sk_psock** %11, align 8
  %17 = load %struct.sk_psock*, %struct.sk_psock** %11, align 8
  %18 = icmp ne %struct.sk_psock* %17, null
  %19 = xor i1 %18, true
  %20 = zext i1 %19 to i32
  %21 = call i64 @unlikely(i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %4
  %24 = load %struct.sock*, %struct.sock** %6, align 8
  %25 = load %struct.sk_msg*, %struct.sk_msg** %7, align 8
  %26 = call i32 @sk_msg_free(%struct.sock* %24, %struct.sk_msg* %25)
  store i32 0, i32* %5, align 4
  br label %49

27:                                               ; preds = %4
  %28 = load i32, i32* %10, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %37

30:                                               ; preds = %27
  %31 = load %struct.sock*, %struct.sock** %6, align 8
  %32 = load %struct.sk_psock*, %struct.sk_psock** %11, align 8
  %33 = load %struct.sk_msg*, %struct.sk_msg** %7, align 8
  %34 = load i32, i32* %8, align 4
  %35 = load i32, i32* %9, align 4
  %36 = call i32 @bpf_tcp_ingress(%struct.sock* %31, %struct.sk_psock* %32, %struct.sk_msg* %33, i32 %34, i32 %35)
  br label %43

37:                                               ; preds = %27
  %38 = load %struct.sock*, %struct.sock** %6, align 8
  %39 = load %struct.sk_msg*, %struct.sk_msg** %7, align 8
  %40 = load i32, i32* %8, align 4
  %41 = load i32, i32* %9, align 4
  %42 = call i32 @tcp_bpf_push_locked(%struct.sock* %38, %struct.sk_msg* %39, i32 %40, i32 %41, i32 0)
  br label %43

43:                                               ; preds = %37, %30
  %44 = phi i32 [ %36, %30 ], [ %42, %37 ]
  store i32 %44, i32* %12, align 4
  %45 = load %struct.sock*, %struct.sock** %6, align 8
  %46 = load %struct.sk_psock*, %struct.sk_psock** %11, align 8
  %47 = call i32 @sk_psock_put(%struct.sock* %45, %struct.sk_psock* %46)
  %48 = load i32, i32* %12, align 4
  store i32 %48, i32* %5, align 4
  br label %49

49:                                               ; preds = %43, %23
  %50 = load i32, i32* %5, align 4
  ret i32 %50
}

declare dso_local i32 @sk_msg_to_ingress(%struct.sk_msg*) #1

declare dso_local %struct.sk_psock* @sk_psock_get(%struct.sock*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @sk_msg_free(%struct.sock*, %struct.sk_msg*) #1

declare dso_local i32 @bpf_tcp_ingress(%struct.sock*, %struct.sk_psock*, %struct.sk_msg*, i32, i32) #1

declare dso_local i32 @tcp_bpf_push_locked(%struct.sock*, %struct.sk_msg*, i32, i32, i32) #1

declare dso_local i32 @sk_psock_put(%struct.sock*, %struct.sk_psock*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
